@@ -1,35 +1,37 @@
 package io.izzel.arclight.common.mod.util.remapper.patcher;
 
+import io.izzel.arclight.api.PluginPatcher;
 import io.izzel.arclight.common.mod.ArclightMod;
 import io.izzel.arclight.common.mod.util.remapper.ClassLoaderRemapper;
+import io.izzel.arclight.common.mod.util.remapper.GlobalClassRepo;
 import io.izzel.arclight.common.mod.util.remapper.PluginTransformer;
 import org.bukkit.configuration.file.YamlConfiguration;
 import org.objectweb.asm.tree.ClassNode;
 
 import java.io.File;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 public class ArclightPluginPatcher implements PluginTransformer {
 
-    private final List<PluginTransformer> list;
+    private final List<PluginPatcher> list;
 
-    public ArclightPluginPatcher(List<PluginTransformer> list) {
+    public ArclightPluginPatcher(List<PluginPatcher> list) {
         this.list = list;
     }
 
     @Override
     public void handleClass(ClassNode node, ClassLoaderRemapper remapper) {
-        for (PluginTransformer transformer : list) {
-            transformer.handleClass(node, remapper);
+        for (PluginPatcher patcher : list) {
+            patcher.handleClass(node, GlobalClassRepo.INSTANCE);
         }
     }
 
@@ -37,32 +39,36 @@ public class ArclightPluginPatcher implements PluginTransformer {
         File pluginFolder = new File("plugins");
         if (pluginFolder.exists()) {
             ArclightMod.LOGGER.info("patcher.loading");
-            ArrayList<PluginTransformer> list = new ArrayList<>();
-            for (File file : pluginFolder.listFiles()) {
-                if (file.isFile() && file.getName().endsWith(".jar")) {
-                    loadFromJar(file.toPath()).ifPresent(list::add);
+            ArrayList<PluginPatcher> list = new ArrayList<>();
+            File[] files = pluginFolder.listFiles();
+            if (files != null) {
+                for (File file : files) {
+                    if (file.isFile() && file.getName().endsWith(".jar")) {
+                        loadFromJar(file).ifPresent(list::add);
+                    }
                 }
-            }
-            if (!list.isEmpty()) {
-                list.sort(Comparator.comparing(PluginTransformer::priority));
-                ArclightMod.LOGGER.info("patcher.loaded", list.size());
-                transformerList.add(new ArclightPluginPatcher(list));
+                if (!list.isEmpty()) {
+                    list.sort(Comparator.comparing(PluginPatcher::priority));
+                    ArclightMod.LOGGER.info("patcher.loaded", list.size());
+                    transformerList.add(new ArclightPluginPatcher(list));
+                }
             }
         }
     }
 
-    private static Optional<PluginTransformer> loadFromJar(Path path) {
-        try {
-            FileSystem fileSystem = FileSystems.newFileSystem(path, ArclightPluginPatcher.class.getClassLoader());
-            Path pluginYml = fileSystem.getPath("plugin.yml");
-            if (Files.exists(pluginYml)) {
-                YamlConfiguration configuration = YamlConfiguration.loadConfiguration(Files.newBufferedReader(pluginYml));
-                String name = configuration.getString("arclight.patcher");
-                if (name != null) {
-                    URLClassLoader loader = new URLClassLoader(new URL[]{path.toUri().toURL()}, ArclightPluginPatcher.class.getClassLoader());
-                    Class<?> clazz = Class.forName(name, false, loader);
-                    PluginTransformer transformer = clazz.asSubclass(PluginTransformer.class).newInstance();
-                    return Optional.of(transformer);
+    private static Optional<PluginPatcher> loadFromJar(File file) {
+        try (JarFile jarFile = new JarFile(file)) {
+            JarEntry jarEntry = jarFile.getJarEntry("plugin.yml");
+            if (jarEntry != null) {
+                try (InputStream stream = jarFile.getInputStream(jarEntry)) {
+                    YamlConfiguration configuration = YamlConfiguration.loadConfiguration(new InputStreamReader(stream));
+                    String name = configuration.getString("arclight.patcher");
+                    if (name != null) {
+                        URLClassLoader loader = new URLClassLoader(new URL[]{file.toURI().toURL()}, ArclightPluginPatcher.class.getClassLoader());
+                        Class<?> clazz = Class.forName(name, false, loader);
+                        PluginPatcher patcher = clazz.asSubclass(PluginPatcher.class).getConstructor().newInstance();
+                        return Optional.of(patcher);
+                    }
                 }
             }
         } catch (Throwable e) {
